tests/features/getters.lmq
using luminique::std::math;

class Circle {
  function __init__(radius) {
    this.radius = radius;
  }

  get area {
    return math::pi * (this.radius ** 2);
  }
}

let c1 = Circle(5);
println(c1.area);

c1.area = 10; // error
